--- a/style.css
+++ b/style.css
@@ -169,7 +169,6 @@ input {
 }
 
 #sidebar li a:hover {
-    background-color: hsla(146, 35%, 58%, 0.3);
     border-radius: 20px;
     padding: 5px 10px; 
 }
@@ -305,4 +304,40 @@ input {
     margin-left: 10px;
     margin-bottom: 10px;
     margin-top: 10px;
+}
+
+.post-dialog {
+    border: 4px solid var(--button-color);
+    width: 60%;
+    border-radius: 20px;
+    background: var(--background-color);
+    color: white;
+
+}
+
+/* Post-Dialog */
+.post-dialog-content {
+    padding: 20px;
+}
+
+.author-and-close-button {
+    display: flex;
+    justify-content: space-between;
+}
+
+.profile-picture-on-post-dialog {
+    display: flex;
+    align-items: center;
+}
+
+.close-dialog-button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    color: white;
+}
+
+.profile-picture-and-name {
+    display: flex;
+    align-items: center;
 }
