--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 :root {
     --background-color: #021C1E;
     --main-color: #004445;
@@ -234,7 +232,7 @@ input {
 /* Post Grid Layout Section */
 #post-grid-layout {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
     gap: 8px;
 }
 
@@ -242,7 +240,8 @@ input {
     padding: 10px;
     margin-bottom: 10px;
     display: flex;
-    width: 350px;
+    min-width: 350px;
+    max-width: 550px;
     flex-direction: column;
     background-color: var(--main-color);
     border-radius: 10px;
@@ -301,9 +300,7 @@ input {
 .like-img, .dislike-img, .comment-img {
     height: 30px;
     width: 30px;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin: 10px 30px 10px 10px;
 }
 
 .post-dialog {
@@ -340,4 +337,16 @@ input {
 .profile-picture-and-name {
     display: flex;
     align-items: center;
+}
+
+/* Create new Post */
+
+.create-new-post-container {
+    background: var(--background-color);
+    color: white;
+    border: none;
+}
+
+#create-post-form > label{
+    color: white;
 }
