--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
 
     <button onclick="toggleRegister()">register</button>
     <button onclick="toggleLogin()">login</button>
+    <button onclick="posts()">posts</button>
+    <button onclick="post1()">post1</button>
     <br>
     <br>
     <br>
@@ -76,6 +78,8 @@
 
     </div>
 
+    <!-- Posts -->
+
 
     <script>
         function toggleRegister() {
@@ -97,21 +101,23 @@
                     method: 'POST',
                     body: formData,
                 })
-                    .then(response => response.json()
+                    .then(response => {
+                        console.log(response)
+                        return response.json()
+                    }
                     )
                     .then(data => {
-                        if (data.error) {
-                            message.innerHTML = 'Error: ' + data.message
-                        } else {
+                        console.log(data)
+                        if (data["register"] === "success") {
                             console.log('registered');
                             toggleRegister()
+                        } else {
+                            message.innerHTML = 'Error: ' + data["message"]
                         }
                     })
                     .catch(error => {
                         console.error('Error registering user:', error);
                     });
-
-
             } else {
                 message.innerHTML = "please check your answers"
             }
@@ -129,11 +135,11 @@
                 })
                     .then(response => response.json())
                     .then(data => {
-                        if (data.error) {
-                            message.innerHTML = 'Error: ' + data.message
-                        } else {
+                        if (data["login"] === "success") {
                             console.log('logged in')
                             toggleLogin()
+                        } else {
+                            message.innerHTML = 'Error: ' + data["message"]
                         }
                     })
                     .catch(error => {
@@ -142,6 +148,41 @@
             } else {
                 message.innerHTML = 'check the answers'
             }
+        }
+
+        function posts() {
+            fetch('/api/posts', {
+                method: 'GET'
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data["posts"] === "success") {
+                        console.log(data["data"])
+                        console.log(data["loggedIn"])
+                        console.log(data)
+                    } else {
+                        console.log("error getting posts")
+
+                    }
+                })
+                .catch(error => {
+                    console.log("error getting posts", error)
+                })
+        }
+
+        function post1() {
+            fetch('/api/posts', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ postNumber: 1 })
+            })
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data)
+                })
+
         }
     </script>
     <!-- <script src="../static/js/index.js"></script> -->
