--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     --main-color: #004445;
     --secondary-color: #2C7873;
     --button-color:  #6FB98F;
+    --button-hover-color: hsl(184, 88%, 20%);
+    --button-active-color: hsl(184, 88%, 30%);
 }
 
 body, html {
@@ -48,7 +50,7 @@ dialog[open] {
     margin:20px;
 }
 
-#add-new-button, #open-profile-button {
+#add-new-button, #dropdown-toggle{
     background: var(--button-color);
     padding: 15px;
     border-radius: 10px;
@@ -59,12 +61,12 @@ dialog[open] {
     font-family: 'Jockey One', sans-serif;
 }
 
-#add-new-button:hover, #open-profile-button:hover {
-    background-color: rgb(111, 185, 130);
+#add-new-button:hover, #dropdown-toggle:hover {
+    background-color: var(--button-hover-color);
 }
 
-#add-new-button:active, #open-profile-button:active {
-    background-color: rgb(111, 185, 150);
+#add-new-button:active, #dropdown-toggle:active {
+    background-color: var(--button-active-color);
 }
 
 /* Login and Registration Section */
@@ -167,8 +169,7 @@ input {
 }
 
 #sidebar li a:hover {
-    border-radius: 20px;
-    padding: 5px 10px; 
+    font-size: 1.7em;
 }
 
 .status {
@@ -187,7 +188,6 @@ input {
     background-color: #f44336;
 }
 
-
 /* Main Content */
 #main-content {
     width: 85%;
@@ -195,6 +195,10 @@ input {
     padding-top: 40px;
     padding-right: 20px;
     box-sizing: border-box;
+}
+
+#main-content-for-posts {
+    flex-direction: column;
 }
 
 #heading-class-for-main-content {
@@ -236,23 +240,31 @@ input {
     gap: 8px;
 }
 
-.post-layout {
+.card-layout {
     padding: 10px;
     margin-bottom: 10px;
     display: flex;
+    word-break: break-all;
+    overflow-wrap: break-word;
     min-width: 350px;
     max-width: 550px;
+    max-height: 255px;
     flex-direction: column;
     background-color: var(--main-color);
     border-radius: 10px;
+    z-index: 1;
+}  
+
+.card-layout .description-div {
+    max-width: 100%;
 }
 
-.post-layout:hover {
-    background:rgba(111, 185, 129, 0.495);
+.card-layout:hover {
+    transform: scale(1.03);
     cursor: pointer;
 }
 
-.post-layout h3 {
+.card-layout h3 {
     color: white;
 }
 
@@ -267,7 +279,7 @@ input {
     color: var(--secondary-color);
 }
 
-.profile-picture-on-post {
+.profile-picture-on-card {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -288,7 +300,7 @@ input {
     margin: 10px;
 } 
 
-.short-descriptsion-for-post {
+.short-descriptsion-for-card {
     display: flex;
     margin: 10px;
 }
@@ -301,6 +313,7 @@ input {
     height: 30px;
     width: 30px;
     margin: 10px 30px 10px 10px;
+    z-index: 2;
 }
 
 .post-dialog {
@@ -328,10 +341,17 @@ input {
 }
 
 .close-dialog-button {
-    background: transparent;
-    border: none;
+    color: #aaa;
+    float: right;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.close-dialog-button:hover,
+.close-dialog-button:focus {
+    color: #fff;
+    text-decoration: none;
     cursor: pointer;
-    color: white;
 }
 
 .profile-picture-and-name {
@@ -341,12 +361,259 @@ input {
 
 /* Create new Post */
 
-.create-new-post-container {
+/* .create-new-post-container {
     background: var(--background-color);
     color: white;
     border: none;
+} */
+
+.add-new-post-dialog {
+    background: var(--background-color);
+    color: white;
+    border-radius: 20px;
+
 }
 
 #create-post-form > label{
     color: white;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    z-index: 1;
+    left: -165px;
+    padding: 20px 10px;
+}
+
+.dropdown-menu a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 30px;
+}
+
+.dropdown-menu > button {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 30px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.dropdown-menu a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown.show .dropdown-menu {
+    display: block;
+}
+
+.show {
+    display: block;
+}
+
+/* User Profile Section */
+#user-profile {
+    flex-direction: column;
+}
+
+#user-profile-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+#user-profile-picture-and-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 10px;
+}
+
+#user-profile-picture-and-name h2 {
+    margin-left: 20px;
+    font-size: 70px;
+    color: white;
+}
+
+#user-profile-picture {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 90px;
+    color: white;
+    background: var(--secondary-color);
+}
+
+#save-user-profile-changes-button {
+    width: 250px;
+    height: 60px;
+    background: var(--button-color);
+    margin: 10px;
+    border-radius: 10px;
+    font-size: 30px;
+    font-family: 'Jockey One', sans-serif;
+    border: none;
+}
+
+#save-user-profile-changes-button:hover {
+    background: var(--button-hover-color);
+    border: none; 
+}
+
+#save-user-profile-changes-button:active {
+    background: var(--button-active-color);
+    border: none;   
+}
+
+#change-profile-information-form{
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-field {
+    display: flex;
+    flex-direction: column;
+    width: 48%
+}
+
+.form-field > input {
+    width: 800px;
+}
+
+.password-field-for-user-profile {
+    display: flex;
+}
+
+#show-password-button {
+    background: transparent;
+    border: none;
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+/* Messenger Section */
+#messenger-container {
+    position: fixed;
+    bottom: 0;
+    right: 20px;
+    width: 400px;
+    height: 600px;
+    background-color: var(--background-color);
+    border: 1px solid #ccc;
+    border-bottom: none;
+    border-radius: 10px 10px 0 0;
+    flex-direction: column;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+}
+
+#messenger-header {
+    background-color: var(--secondary-color);
+    color: white;
+    padding: 0px 10px;
+    border-radius: 10px 10px 0 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#messenger-content {
+    flex-grow: 1;
+    padding: 10px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 20px;
+}
+
+#messenger-input-container {
+    display: flex;
+    padding: 10px;
+    border-top: 1px solid #ccc;
+}
+
+#messenger-input {
+    flex-grow: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 10px;
+    width: 300px;
+}
+
+#send-message-button {
+    background-color: var(--secondary-color);
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#open-messenger {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #0078ff;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#close-messenger {
+    border: none;
+    background: transparent;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.message {
+    margin: 10px;
+    border-radius: 20px;
+    padding: 10px;
+    max-width: fit-content;
+    word-break: break-all;
+    overflow-wrap: break-word;
+}
+
+.message.user {
+    background: var(--button-hover-color);
+    align-self: flex-end;
+}
+
+.message.other {
+    background-color: var(--button-active-color);
+    align-self: flex-start;
+}
+
+#chat-with {
+    font-size: 30px;
 }
