online status changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
             display: none;
         }
     </style>
-    mainpage
-
+    frontend 💯
+    <br>
     <button onclick="toggleRegister()">register</button>
     <button onclick="toggleLogin()">login</button>
     <button onclick="togglePost()">posting</button>
