--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
     <button onclick="changeLike('comment',1,1, 1)">likeComment</button>
     <button onclick="changeLike('comment',1,1,-1)">dislikeComment</button>
     <button onclick="toggleWebsocket()">websocket</button>
+    <button onclick="logout()">logout</button>
     <br>
     <br>
     <br>
