--- a/frontend/style.css
+++ b/frontend/style.css
@@ -74,7 +74,7 @@ dialog[open] {
     justify-content: center;
     align-items: center;
     flex-grow: 1;
-    margin-top: 10%;
+    height: 88vh;
 }
 
 #login-and-registration-section {
@@ -82,7 +82,6 @@ dialog[open] {
     width: 700px;
     border-radius: 20px;
     background: var(--main-color);
-    display: flex;
     justify-content: flex-start;
     align-items: center;
     padding-left: 50px;
@@ -97,7 +96,7 @@ label {
     margin-bottom: 10px;
     font-weight: bold;
     color: white;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 input {
@@ -107,7 +106,7 @@ input {
     border-radius: 10px;
     width: 620px;
     background-color: var(--button-color);
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .login-button, .registration-button {
@@ -126,8 +125,26 @@ input {
     background: var(--secondary-color);
 }
 
-.login-button:hover, .registration-button:hover {
+.login-button:hover, .registration-button:hover, #register-user-button:hover {
     background: hsl(184, 88%, 20%);
+}
+
+/* Registration Section */
+#registration-section {
+    padding: 5px 100px 5px 100px;
+    flex-direction: column;
+    border-radius: 20px;
+    background: var(--main-color);
+}
+#registration-section h1 {
+    color: white;
+    font-size: 40px;
+}
+
+#register-user-button {
+    width: 50%;
+    background-color: var(--background-color);
+    color: white;
 }
 
 /* Sidebar Section */
