--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -548,6 +548,32 @@ input {
 
 }
 
+.comment .like-dislike-comment-section .like-dislike-comment[data-action="like"] .like-button {
+    width: 18px; /* Example size */
+    height: 18px;
+}
+
+.comment .like-dislike-comment-section .like-dislike-comment[data-action="dislike"] .dislike-button {
+    width: 18px; /* Example size */
+    height: 18px;
+}
+
+.comment .like-dislike-comment-section .like-dislike-comment[data-action="like"] .like-count {
+    font-size: 15px;
+}
+
+.comment .like-dislike-comment-section .like-dislike-comment[data-action="dislike"] .dislike-count {
+    font-size: 15px;
+}
+
+.comment .like-dislike-comment-section .like-dislike-comment {
+    margin: 5px 10px
+}
+
+.new-comment input {
+    width: 88%;
+}
+
 #add-comment-button {
     background: var(--button-color);
     padding: 10px;
@@ -582,7 +608,7 @@ input {
 .dropdown-menu {
     display: none;
     position: absolute;
-    background-color: white;
+    background-color: var(--secondary-color);
     min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     border-radius: 5px;
@@ -592,7 +618,7 @@ input {
 }
 
 .dropdown-menu > button {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -607,6 +633,7 @@ input {
 .dropdown-menu button:hover {
     background-color: #f1f1f1;
     border-radius: 20px;
+    color: black;
 }
 
 .dropdown.show .dropdown-menu {
@@ -802,3 +829,41 @@ input {
 #chat-with {
     font-size: 30px;
 }
+
+/* Custome Fields */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.modal-button {
+    margin: 10px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #6FB98F;
+    color: #fff;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.modal-button:hover {
+    background-color: #5a8a77;
+}
+
+
